Server(feat): Finally revised the routes for api/article
